# ewg-rag-hang

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
backend/: cli.py  jsonl_to_txt.py  parse_label_info.py
infra/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  docker-startup.sh
input-datasets/books/: 0000-Cliganic 100% Pure & Natural Neem Oil.txt  0001-Inna Organic Frankincense Revitalizing Face & Eye Cream.txt  0002-DIME Boost Duo.txt  0003-cleanjourney Clean Slay Purifying Face Cleanser.txt  0004-Sally B's Skin Yummies Peptide Booster Serum.txt  0005-Akar Skin Nourish Balancing Essence.txt  0006-Sally B's Skin Yummies B Cool Cooling Mist.txt  0007-Just the Goods lightly foaming + exfoliating vegan face wash for normal sensitiv.txt  0008-Vermont Skincare Company Moisturizer 6 (M6).txt  0009-Honey Sweetie Acres Goat Milk Soap, Avocado Facial.txt  0010-W O Activate.txt  0011-Honest Beauty Gentle Gel Cleanser.txt  0012-Cliganic Organic Pumpkin Seed Oil.txt  0013-Sonage Opaleze Brightening Serum ®.txt  0014-Inna Organic Myrrh Hydrating Face Mask.txt  0015-Advanced Search.txt  0016-Herbivore Botanicals Phoenix Facial Oil.txt  0017-Sally B's Skin Yummies Daytime Antioxidant Serum.txt  0018-jenuinely pure astringent.txt  0019-Whamisa Organic Leaf Root All In One Moisturizer For Men.txt  0020-isoi Bulgarian Rose Ultra Waterfull Oil.txt  0021-Counter Antioxidant Soft Cream.txt  0022-Akar Skin Nourish Cleansing Syrup.txt  0023-Superbloom Daily Dew Cleansing Oil.txt  0024-Dr. Bronner's 4-in-1 Organic Sugar Soap, Tea Tree.txt  (+1779 more)
